# jobforge-ai

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  init_setup.sh  pyproject.toml
.github/: branch-protection.md  pull_request_template.md
.github/workflows/: ci-cd.yml
apps/dashboard/: index.html
apps/web/: auth.py  main.py
apps/web-ui/: README.md  index.html  package.json  tailwind.config.js
apps/web-ui/src/: App.jsx  index.css
apps/web-ui/src/contexts/: AuthContext.jsx
apps/web-ui/src/hooks/: useApi.js
apps/web/api/: apply.py  artifacts.py  decision.py  jobs.py  outcomes.py  preferences.py  profile.py  resume.py  scoring.py  user.py
apps/web/frontend/: package.json
apps/worker/: __init__.py  celery_app.py
apps/worker/tasks/: jd_parsing.py  job_ingestion.py  scoring.py
config/: candidate_profile.json  cost_limits.yaml  redis_config.yaml  rules_config.yaml  scoring_weights.json
docs/: ACR_SETUP.md  ANSWER_TO_FRIEND.md  ARCHITECTURE_OVERVIEW.md  AZURE_OPENAI_GUIDE.md  COMPLETE_SETUP_SUMMARY.md  DATA_ISOLATION.md  DEPLOYMENT_SUMMARY.md  FRONTEND_UX_ARCHITECTURE.md  INDEX.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  SETUP_FOR_TEAM.md  VSCODE_CONFIG.md  careerops_architecture.md  execution_plan_with_risk_mitigation.md  local_run.md  plan_updates_summary.md  risk_mitigation_strategy.md
infra/: docker-compose.yml
infra/docker/: Dockerfile.web  Dockerfile.worker
services/apply_bot/: __init__.py  apply_orchestrator.py  auto_submit_gate.py
services/artifacts/: __init__.py  answers_generator.py  pitch_generator.py  resume_tailor.py
services/decision_engine/: __init__.py  decision_service.py
services/jd_parser/: __init__.py  fallback_parser.py  jd_parser.py  validation_service.py
services/job_ingestion/: __init__.py  ingestion_service.py  normalizer.py
services/job_ingestion/sources/: __init__.py  jsearch_source.py  linkedin_scraper.py
services/resume_analyzer/: __init__.py  resume_parser.py  role_extractor.py
services/scoring/: __init__.py  feedback_analyzer.py  rationale_generator.py  rules_engine.py  scoring_service.py
tests/: conftest.py
tests/integration/: test_azure_openai.py  test_e2e_happy_path.py  test_resume_flow.py
tests/performance/: benchmark.py
tests/unit/: test_jd_schema.py  test_redis_cache.py  test_salary_normalisation.py  test_scoring.py
(+22 files in other folders)
