[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jobforge-ai"
version = "0.1.0"
description = "Intelligent job application agent with human-in-the-loop safety"
readme = "README.md"
packages = [{include = "apps"}, {include = "services"}, {include = "packages"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
email-validator = ">=2.0.0"
sqlalchemy = ">=2.0.23"
alembic = ">=1.12.1"
psycopg2-binary = ">=2.9.9"
pgvector = ">=0.2.4"
redis = ">=5.0.1"
celery = ">=5.3.4"
openai = ">=1.3.0"
playwright = ">=1.40.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.2"
lxml = ">=4.9.3"
PyPDF2 = ">=3.0.1"
python-docx = ">=1.1.0"
pdfplumber = ">=0.10.3"
reportlab = ">=4.0.7,<5.0"
python-multipart = ">=0.0.6"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
bcrypt = ">=4.0.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.1"
httpx = ">=0.25.2"
websockets = ">=12.0"
aiofiles = ">=23.2.1"
azure-storage-blob = ">=12.19.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
black = ">=23.11.0"
flake8 = ">=6.0.0"
ruff = ">=0.1.6"
mypy = ">=1.7.0"
types-redis = ">=4.6.0.11"
types-PyYAML = ">=6.0.12.12"
types-requests = ">=2.31.0"

[tool.pytest.ini_options]
# Discover all tests under tests/
testpaths = ["tests"]
# Recurse into subdirectories
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# asyncio mode
asyncio_mode = "strict"
# Suppress "unknown mark" warnings by registering all custom marks
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "unit: marks tests as unit tests (no external deps)",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow-running",
]
# Short traceback for clean output
addopts = "--tb=short -q"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
